# Scanner-for-C

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Push  README.md  Scanner  Scanner.cbp  Scanner.layout  cmake_install.cmake  example.c  push.sh  scanner.c  scanner.h  text.txt
